// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages RendersAsExpected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`Messages RendersWithNoUnread 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
